--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -15,7 +15,7 @@ RUN sed -i 's/v3.20/edge/g' /etc/apk/repositories && apk update && \
 
 FROM alpine:3.21
 ENV TZ="Asia/Shanghai"
-COPY --from=smartdns-builder /smartdns/src/smartdns /
+COPY --from=smartdns-builder /smartdns/src/smartdns /usr/sbin
 COPY --from=smartdns-builder /smartdns/plugin/smartdns-ui/target/release/libsmartdns_ui.so /usr/lib
 EXPOSE 53/udp 53/tcp
 VOLUME "/etc/smartdns/"
