--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -1,4 +1,4 @@
-FROM congyuwang/musllinux_1_2_x86_64:llvm-19.1.3 as smartdns-builder
+FROM --platform=$TARGETPLATFORM congyuwang/musllinux_1_2_x86_64:llvm-19.1.3 as smartdns-builder
 LABEL previous-stage=smartdns
 COPY . /smartdns/
 RUN sed -i 's/v3.20/edge/g' /etc/apk/repositories && apk update && \
@@ -13,7 +13,7 @@ RUN sed -i 's/v3.20/edge/g' /etc/apk/repositories && apk update && \
     cd /smartdns/plugin/smartdns-ui && \
     LIBCLANG_STATIC_PATH=/usr/local/lib LLVM_CONFIG_PATH=/root/llvm_config.sh RUSTFLAGS='-C link-arg=-Wl,-rpath,./ -C target-feature=-crt-static' cargo build --release
 
-FROM alpine:3.21
+FROM --platform=$TARGETPLATFORM alpine:3.21
 ENV TZ="Asia/Shanghai"
 COPY --from=smartdns-builder /smartdns/src/smartdns /usr/sbin
 COPY --from=smartdns-builder /smartdns/plugin/smartdns-ui/target/release/libsmartdns_ui.so /usr/lib
